<resources>
    <string name="app_name">My Application</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="select">Select</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="terms">I agree to Terms of Use</string>
</resources>