<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/firstname"
        app:layout_constraintEnd_toStartOf="@+id/etLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvFirstName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtvLastName" />

    <TextView
        android:id="@+id/txtvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/lastname"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/txtvGender"
        app:layout_constraintStart_toEndOf="@+id/txtvGender"
        app:layout_constraintTop_toTopOf="@+id/txtvGender">

        <RadioButton
            android:id="@+id/rbtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/etBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/birthday"
        app:layout_constraintEnd_toStartOf="@+id/btnSelect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvBirthday" />

    <CalendarView
        android:id="@+id/CalenderView"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etBirthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtvBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/birthday"
        app:layout_constraintStart_toStartOf="@+id/txtvGender"
        app:layout_constraintTop_toBottomOf="@+id/txtvGender" />

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="@+id/etBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etBirthday"
        app:layout_constraintTop_toTopOf="@+id/etBirthday" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvAddress" />

    <TextView
        android:id="@+id/txtvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalenderView" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvEmail" />

    <TextView
        android:id="@+id/txtvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb" />


</androidx.constraintlayout.widget.ConstraintLayout>